wp-content/themes/rethink-event/sass/01-sections/_nav.scss
.nav-fake {
  height: 80px;
  width: 100%;
}

.nav-wrapper {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  background-color: $black;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  width: 100%;
  z-index: 9;

}

.nav {
  display: flex;
  padding: 20px 0;
  justify-content: space-between;
  align-items: center;
  height: 80px;
  width: 90%;
  max-width: 1300px;
  margin: 0 auto;

  @keyframes slide-down {
    from {
      max-height: 0;
    }
    to {
      max-height: calc(100vh - 80px);
    }
  }

  @keyframes slide-up {
    from {
      max-height: calc(100vh - 80px);
    }
    to {
      max-height: 0;
    }
  }

}

.nav__logo {
  width: 160px;
  min-width: 160px;
  svg {
    width: 100%;

    .a {
      transition: fill 0.4s;
    }
    &:hover {
      .a {
        fill: $yellow;
      }
    }
  }
}

.nav__button {
  color: $green;
  width: 30px;
  cursor: pointer;
  transition: color 0.4s;
  &:hover {
    color: $yellow;
  }

  &--show {
    display: block;
  }

  &--hide {
    display: none;
  }

  @media (min-width: 980px) {
    display: none;
  }
}

.nav__menu-mobile {
  position: absolute;
  top: 80px;
  right: 0;
  left: 0;
  width: 100%;
  max-height: 0;

  background-color: $black;
  z-index: 999;
  display: flex;
  flex-direction: column;
  overflow: hidden;

  &--show {
    animation: slide-down 0.6s forwards;
  }

  &--hide {
    animation: slide-up 0.6s forwards;
  }

  @media (min-width: 980px) {
    display: none;
  }

  ul {

    overflow: auto;
    margin-bottom: 0;
    height: 100%;
    &:first-child {
      padding-top: 20px;
      padding-bottom: 50px;
      @media (min-width: 500px) {
        padding-top: 50px;
        padding-bottom: 50px;
      }
    }
  }

  li {
    font-weight: 500;
    list-style: none;
    line-height: 1;
    margin-bottom: 0;
    text-transform: lowercase;
    cursor: pointer;
    position: relative;
    margin-bottom: 20px;

    a {
      @include font-size(24);
      color: $white;
      text-decoration: none;
      white-space: nowrap;
      margin-right: 10px;
      display: block;
      width: 100%;
      padding: 10px 0 10px 20px;
      transition: color 0.4s background-color 0.4s;

      &:hover {
        color: $black;
        background-color: $yellow;

        @media (min-width: 980px) {
          color: $white;

          background-color: $green;
        }
      }

      @media (min-width: 980px) {
        @include font-size(16);
        margin-left: 20px;
      }
    }
  }

  .current-menu-item {
    a {
      color: $yellow;
    }
    ul a {
      color: $white !important;
      &:hover {
        color: $black !important;
      }
    }
  }

  .sub-menu {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    overflow: hidden;
    li {
      display: block;
      width: 100%;
      margin: 0;
      padding: 3px 0px 3px 0px;
      font-weight: 300;
      &:hover {
        background-color: $yellow;
        a {
          color: $black;
        }
      }

      @media (min-width: 980px) {
        background-color: $green;
      }

      a,
      a:link,
      a:visited {
        width: unset;
        @include font-size(19);
        margin-left: 20px;
        white-space: normal;
        line-height: 1.1;

        &:hover {
          color: $black;
        }

        @media (min-width: 980px) {
          @include font-size(16);
          text-align: left;
          color: $white;
          background-color: transparent;
        }
      }

      // 3rd Level Menu
      ul{
        li{
          a{

            padding: 10px 0 10px 30px;
            &:before {
              content: "- ";
            }

          }
        }
      }
    }

    &--hover {

    }

    li a:link {
      line-height: 1.6;
      padding: 5px 6px 5px 30px;
    }
  }
}

// DESKTOP NAV --- DESKTOP NAV --- DESKTOP NAV --- DESKTOP NAV ---
// DESKTOP NAV --- DESKTOP NAV --- DESKTOP NAV --- DESKTOP NAV ---
// DESKTOP NAV --- DESKTOP NAV --- DESKTOP NAV --- DESKTOP NAV ---
// DESKTOP NAV --- DESKTOP NAV --- DESKTOP NAV --- DESKTOP NAV ---
// DESKTOP NAV --- DESKTOP NAV --- DESKTOP NAV --- DESKTOP NAV ---

.nav__menu-desktop {
  display: none;
  @media (min-width: 980px) {
    display: block;
    position: static;
    z-index: 5;
    height: auto;
    background-color: transparent;
    overflow: initial;
    max-height: initial;
  }

  .current-menu-item {
    a {
      color: $yellow !important;
      &:hover {
        color: $black !important;
      }
    }
    ul a {
      color: $white !important;
      &:hover {
        color: $black !important;
      }
    }
  }
}


// Level 1 --- Level 1 --- Level 1 ---
// Level 1 --- Level 1 --- Level 1 ---
// Level 1 --- Level 1 --- Level 1 ---

.nav__menu-desktop  ul {
  overflow: unset;
  display: flex;
  align-items: center;
  margin-bottom: 0;
}

.nav__menu-desktop ul li {
  font-weight: 500;
  list-style: none;
  line-height: 1;
  margin-bottom: 0;
  text-transform: lowercase;
  cursor: pointer;
  position: relative;

  display: inline;
  @include font-size(16);

  //bold for New for 2021 li
  + .page-item-85 {
    a {
      font-weight: bold;
    }
  }

  a {
    @include font-size(16);
    color: $white;
    text-decoration: none;
    white-space: nowrap;
    margin-left: 20px;
    margin-right: 10px;
    display: block;
    width: 100%;
    text-align: center;
    padding: 10px 0;
    transition: color 0.4s background-color 0.4s;
  }
}


// Level 2 --- Level 2 --- Level 2 ---
// Level 2 --- Level 2 --- Level 2 ---
// Level 2 --- Level 2 --- Level 2 ---

.nav__menu-desktop  ul li ul {
  margin: 0;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  position: absolute;
  z-index: 999;
  left: 20px;
  opacity: 0;
  background-color: $green;
  transition: opacity 0.3s ease-in-out;
  min-width: 130px;

}

.nav__menu-desktop ul li ul li {

  display: block;
  width: 100%;
  margin: 0;
  font-weight: 300;
  background-color: $green;

  a {
    width: unset;
    line-height: 1.1;
    margin: 0;
    padding: 10px 20px;
    &:hover {
      color: $black;
      background-color: $yellow !important;
    }
      @include font-size(16);
      text-align: left;
      color: $white;
  }
  &:last-child{
    padding-bottom: 10px;
  }

}

// Level 3 --- Level 3 --- Level 3 ---
// Level 3 --- Level 3 --- Level 3 ---
// Level 3 --- Level 3 --- Level 3 ---
.nav__menu-desktop ul li ul li ul{

  position: static;
   top: 10px;
}

.nav__menu-desktop ul li ul li ul li{

  // margin:  0 0 0 -20px;
  a{
    color: $white !important;
    // padding: 10px 0 10px 30px;
    &:before {
      content: "- ";
    }

    &:hover {
      color: $black !important;

    }

  }
}


// HOVER DONE HERE --- // HOVER DONE HERE --- // HOVER DONE HERE ---
// HOVER DONE HERE --- // HOVER DONE HERE --- // HOVER DONE HERE ---
// HOVER DONE HERE --- // HOVER DONE HERE --- // HOVER DONE HERE ---

.nav__menu-desktop ul li{
  &:hover{
    a {
      color: $white;
      background-color: $green;
    }
    ul {
      opacity: 1;
    }
  }
}

